--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,10 @@
     <string name="notification_description">The Project 3 repository is downloaded</string>
     <string name="notification_button">See changes</string>
 
-    <string name="button_name">Click me</string>
-    <string name="button_loading">We are loading </string>
+    <string name="button_name">Download</string>
+    <string name="button_loading">We are loading! </string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="radioBtn_text2">Load App - Current repository by Udacity</string>
+    <string name="radioBtn_text1">Glide - Image Loading Library by BumpTech</string>
+    <string name="radioBtn_text3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
 </resources>
