--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Load App</string>
+    <string name="home_screen_title">Home</string>
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
 
@@ -12,7 +13,7 @@
 
     <string name="button_name">Download</string>
     <string name="button_loading">We are loading! </string>
-    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_detail">Details</string>
     <string name="radioBtn_text2">Load App - Current repository by Udacity</string>
     <string name="radioBtn_text1">Glide - Image Loading Library by BumpTech</string>
     <string name="radioBtn_text3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
